--- a/src/event-listener/event-listener.html
+++ b/src/event-listener/event-listener.html
@@ -1,7 +1,8 @@
 <script type="text/javascript">
   RED.nodes.registerType('ewelink-event-listener', {
     category: 'eWeLink',
-    color: '#a6bbcf',
+    color: '#7bb6ef',
+    icon: 'bridge.png',
     defaults: {
       name: { value: '' },
       deviceId: { value: '' },
@@ -10,6 +11,9 @@
     outputs: 1,
     label: function () {
       return this.name || 'eWeLink Event Listener';
+    },
+    paletteLabel: function () {
+      return 'event listener';
     }
 });
 </script>
