--- a/src/temperature/temperature.html
+++ b/src/temperature/temperature.html
@@ -1,7 +1,8 @@
 <script type="text/javascript">
   RED.nodes.registerType('ewelink-temperature', {
     category: 'eWeLink',
-    color: '#a6bbcf',
+    color: '#7bb6ef',
+    icon: 'font-awesome/fa-fire',
     defaults: {
       name: { value: '' },
       deviceId: { value: '' },
@@ -11,6 +12,9 @@
     outputs: 1,
     label: function () {
       return this.name || 'eWeLink Temperature';
+    },
+    paletteLabel: function () {
+      return 'temperature';
     }
 });
 </script>
