--- a/src/devices/devices.html
+++ b/src/devices/devices.html
@@ -1,7 +1,8 @@
 <script type="text/javascript">
   RED.nodes.registerType('ewelink-devices', {
     category: 'eWeLink',
-    color: '#a6bbcf',
+    color: '#7bb6ef',
+    icon: 'font-awesome/fa-microchip',
     defaults: {
       name: { value: '' },
       auth: { value: '', type: 'ewelink-credentials' }
@@ -10,6 +11,9 @@
     outputs: 1,
     label: function () {
       return this.name || 'eWeLink Devices';
+    },
+    paletteLabel: function () {
+      return 'devices';
     }
 });
 </script>
