--- a/src/generic-device/generic-device.html
+++ b/src/generic-device/generic-device.html
@@ -1,7 +1,8 @@
 <script type="text/javascript">
   RED.nodes.registerType('ewelink-generic-device', {
     category: 'eWeLink',
-    color: '#a6bbcf',
+    color: '#7bb6ef',
+    icon: 'font-awesome/fa-microchip',
     defaults: {
       name: { value: '' },
       deviceId: { value: '' },
@@ -11,6 +12,9 @@
     outputs: 1,
     label: function () {
       return this.name || 'eWeLink Generic Device';
+    },
+    paletteLabel: function () {
+      return 'device';
     }
 });
 </script>
