--- a/src/power-usage/power-usage.html
+++ b/src/power-usage/power-usage.html
@@ -1,7 +1,8 @@
 <script type="text/javascript">
   RED.nodes.registerType('ewelink-power-usage', {
     category: 'eWeLink',
-    color: '#a6bbcf',
+    color: '#7bb6ef',
+    icon: 'font-awesome/fa-plug',
     defaults: {
       name: { value: '' },
       deviceId: { value: '' },
@@ -11,6 +12,9 @@
     outputs: 1,
     label: function () {
       return this.name || 'eWeLink Power Usage';
+    },
+    paletteLabel: function () {
+      return 'power usage';
     }
 });
 </script>
