Fix node descriptions

--- a/src/channel-count/channel-count.html
+++ b/src/channel-count/channel-count.html
@@ -35,5 +35,5 @@
 </script>
 
 <script type="text/x-red" data-help-name="ewelink-channel-count">
-  <p>Retrieves the channel count of the device</p>
+  <p>Retrieves the channels number of the device</p>
 </script>
