--- a/src/humidity/humidity.html
+++ b/src/humidity/humidity.html
@@ -35,5 +35,5 @@
 </script>
 
 <script type="text/x-red" data-help-name="ewelink-humidity">
-  <p>Retrieves the humidity</p>
+  <p>Retrieves the humidity from the device sensor</p>
 </script>
