--- a/src/power-state-read/power-state-read.html
+++ b/src/power-state-read/power-state-read.html
@@ -40,5 +40,5 @@
 </script>
 
 <script type="text/x-red" data-help-name="ewelink-power-state">
-  <p>Reads the power state of the device</p>
+  <p>Reads the power state of the device on the specified channel</p>
 </script>
