--- a/src/power-state-write/power-state-write.html
+++ b/src/power-state-write/power-state-write.html
@@ -41,5 +41,5 @@
 </script>
 
 <script type="text/x-red" data-help-name="ewelink-power-write">
-  <p>Sets the power state of the device</p>
+  <p>Sets the power state of the device on the specified channel</p>
 </script>
