--- a/src/power-usage/power-usage.html
+++ b/src/power-usage/power-usage.html
@@ -35,5 +35,5 @@
 </script>
 
 <script type="text/x-red" data-help-name="ewelink-power-usage">
-  <p>Retrieves or sets the power state of the device</p>
+  <p>Retrieves the power usage of the device</p>
 </script>
