--- a/src/temperature-humidity/temperature-humidity.html
+++ b/src/temperature-humidity/temperature-humidity.html
@@ -35,5 +35,5 @@
 </script>
 
 <script type="text/x-red" data-help-name="ewelink-temperature-humidity">
-  <p>Retrieves the humidity</p>
+  <p>Retrieves the temperature and humidity from the device sensor</p>
 </script>
