--- a/src/temperature/temperature.html
+++ b/src/temperature/temperature.html
@@ -35,5 +35,5 @@
 </script>
 
 <script type="text/x-red" data-help-name="ewelink-temperature">
-  <p>Retrieves the humidity</p>
+  <p>Retrieves the temperature from the device sensor</p>
 </script>
